--- a/i3wm/i3/config
+++ b/i3wm/i3/config
@@ -26,6 +26,16 @@ new_window none
 new_float normal
 hide_edge_borders both
 
+# use window title, but no border
+#使用窗口标题，但不使用边框
+bindsym $mod+t border normal 0
+# use no window title and a thick border
+#不使用窗口标题和粗边框
+bindsym $mod+y border pixel 3
+# use neither window title nor border
+#既不使用窗口标题也不使用边框
+bindsym $mod+u border none
+
 #设置窗口间距
 gaps inner 6
 gaps outer 4
@@ -162,6 +172,9 @@ bindsym $mod+space focus mode_toggle
 # focus the parent container（聚焦父容器）
 bindsym $mod+a focus parent
 
+# focus the child container（聚焦子容器）
+#bindsym $mod+d focus child
+
 # hide | show window（隐藏|显示窗口）
 bindsym $mod+minus move scratchpad
 bindsym $mod+plus scratchpad show
@@ -183,6 +196,7 @@ set $ws6 "6:  "
 set $ws7 "7:  "
 set $ws8 "8"
 set $ws9 "9"
+set $ws10 "10"
 
 # switch to workspace（切换到工作区）
 bindsym $mod+1 workspace $ws1
@@ -194,6 +208,7 @@ bindsym $mod+6 workspace $ws6
 bindsym $mod+7 workspace $ws7
 bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
+bindsym $mod+0 workspace number $ws10
 
 # move focused container to workspace（将聚焦容器移动到工作区）
 bindsym $mod+Shift+1 move container to workspace $ws1
@@ -205,6 +220,7 @@ bindsym $mod+Shift+6 move container to workspace $ws6
 bindsym $mod+Shift+7 move container to workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
+bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # Automatically putting clients on specific workspaces
 # 自动将客户端置于特定工作区
@@ -224,10 +240,10 @@ mode "resize" {
         # 按上键将缩小窗口的高度。
         # Pressing down will grow the window’s height.
         # 按下将增大窗口的高度。
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym $left resize shrink width 10 px or 10 ppt
+        bindsym $down resize grow height 10 px or 10 ppt
+        bindsym $up resize shrink height 10 px or 10 ppt
+        bindsym $right resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         # 相同的绑定，但对于箭头键
@@ -274,4 +290,3 @@ for_window[class="vlc"] floating enable
 #}
 
 # exec --no-startup-id conky -c ~/.conkyrc
-
