--- a/i3wm/polybar/config
+++ b/i3wm/polybar/config
@@ -28,7 +28,7 @@ secondary = #e60053
 alert = #bd2c40
 
 [bar/mybar]
-;monitor = ${env:MONITOR:HDMI-1}
+monitor = ${env:MONITOR:HDMI-0}
 width = 100%
 height = 30
 ;offset-x = 1%
